--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "pg": "^8.5.1",
+        "save": "^2.9.0",
         "sendgrid": "^5.2.3",
         "sequelize": "^6.3.5"
     },
